<resources>
    <string name="app_name">OMPlayer</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="previous">Prev></string>
    <string name="next">Next</string>
    <string name="test_player">Test Player</string>
    <string name="mo_player">OM Player</string>
    <string name="music_player">Music Player</string>
    <string name="library">Library</string>
    <string name="tracklist">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="similar_songs">Similar Songs</string>
    <string name="favorites">Favorites</string>
    <string name="video_not_found">Video Not Found</string>
    <string name="action_bar_video">Video</string>
    <string name="action_bar_player">Player</string>
    <string name="zero_time">00:00</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="player">Player</string>
    <string name="now_playing">Now Playing</string>
    <string name="unauthorised_last_fm_user">Unauthorised</string>
    <string name="scrobble_option">Scrobble</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="last_fm_login">Login</string>
    <string name="last_fm_logout">Logout</string>
    <string name="last_fm_register">Don\'t have an account? <u>Register</u>.</string>
    <string name="songs_similar_to_original">Songs similar to:\n%s</string>
    <string name="settings">Settings</string>
    <string name="favorite_message">You don\'t have any favorite tracks.</string>
</resources>
