<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_background">

        <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_user_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_last_fm_placeholder"
                app:civ_border_width="0dp"
                app:civ_background_color="@color/colorLibraryButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_last_fm_placeholder"/>

        <TextView
                android:id="@+id/user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unauthorised_last_fm_user"
                android:textSize="24sp"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:padding="12dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_user_profile"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
        <TextView
                android:id="@+id/button_log"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/last_fm_login"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/scrobble_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scrobble_option"/>
        <Switch
                android:id="@+id/scrobble_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
    </LinearLayout>

</LinearLayout>